# fracture

./: .gitignore  README.md  pyproject.toml
fracture/: __init__.py  daemon.py  dashboard.py  watcher.py
scripts/: create_repo.py  generate_dashboard_svg.py  test_imports.py  upload_pypi.py
